--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ footer {
 }
 
 .modal-contenido {
-  background: white;
+  background: rgba(255, 255, 255, 0.196);
   padding: 20px;
   border-radius: 6px;
   max-width: 400px;
